Added Darkmode in the code.
Added darkmode in the code two javascript added in the index.html file and new Darkmode.js file is added

--- a/L-13 (Mega Project - CSS)/apnikaksha/index.html
+++ b/L-13 (Mega Project - CSS)/apnikaksha/index.html
@@ -150,6 +150,12 @@
     </footer>
     <!-- Flickity JS files -->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+
+    <!--Darkmode.js added in the  in html -->
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+
+    <!--Darkmode toggle present on screen-->
+    <script src="Darkmode.js"></script>
 </body>
 
 </html>
